# wows_shell

./: .clang-format  .gitignore  .gitmodules  MANIFEST.in  README.md  alignmentAllocator.h  constant.h  fitShell.cpp  gnuplotT1.cpp  pyproject.toml  setup.py  shell.hpp  shellCPP.cpp  shellCPP.hpp  shellCPPWrapper.pyx  tPtest.cpp  test.cpp  threadPool.hpp
Python/: pythonGraphTest.py  pythonTest.py  pythonwrapper.cpp  setup.py  testStability.py
sleef-2.80/simd/: dd.h  helperavx2.h  nonnumber.h  sleefsimddp.c
src/: CMakeLists.txt  controlEnums.hpp  fitShell.cpp  shell.hpp  shellCPP.hpp  test.cpp  threadpool.cpp  threadpool.hpp  utility.hpp  vectorFunctions.hpp
src/Python/: .gitignore  .rendered.pythonwrapper.cpp  CMakeLists.txt  compareOutputs.py  pythonGraphTest.py  pythonTest.py  pythonwrapper.cpp  regression.py  setup.py  shellSplitTest.py  structParamTest.py  testStability.py  wows_shell_python.cpp
src/Python/examples/: pythonGraphTest.py  regression.py  structParamTest.py  testStability.py  trajectoryTest.py  update_penetration_test.py
src/Python/validation/: generate_data.py  generate_reference.py  validation_files_util.py  verify_calculations.py
src/Python/validation/verification_reference/: trajectory_data.csv
src/Python/verification/: generate_reference.py  verification_files_util.py  verify_calculations.py
src/Python/verification/verification_reference/: angles_data.csv  dispersion_data.csv  impact_data.csv  postpenetration_data.csv
src/Wasm/: compile.bat  shellWasm.cpp  shellWasmTest.html
src/Webassembly/: .gitignore  compile.bat  compile_all.bat  compile_threads.bat  compile_threads_vectorized.bat  compile_vectorized.bat  shellWasm.cpp  shellWasmTest.html
src/Webassembly/compile_options/: compile.bat  compile_all_test.bat  compile_test.bat  compile_test_threads_vectorized.bat  compile_test_vectorized.bat  compile_threads.bat  compile_threads_vectorized.bat  compile_vectorized.bat
src/Webassembly/test/: chartTest.html  chartTest.js  shellWasmTest.html  shellWasmTest.js  wows_shell_chartTest.html  wows_shell_chartTest.js
src/fitShell/: CMakeLists.txt  fitShell.cpp
src/test/: CMakeLists.txt  multiShipTest.cpp  test.cpp
wasm/: compile.bat  shellWasm.cpp  shellWasm.js  shellWasm.wasm  shellWasm.worker.js  shellWasmTest.html
